org/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/invalid/Operation/001_Operation_check_callresult_01.kmt


package test;

using kermeta::standard

class A {}

class Test {

	operation test() : Boolean is do
		//result:=true
		
		from var i : Integer init 0
		until i==10
		loop
			result:=false
		end

	end

}